--- a/Report/Project_report.tex
+++ b/Report/Project_report.tex
@@ -1,3 +1,4 @@
+% !TEX program = pdflatex
 \documentclass{article} %document style and layout
 \usepackage{enumitem} %list of elements
 \usepackage{imakeidx}
