--- a/Report/Project_report.tex
+++ b/Report/Project_report.tex
@@ -1,4 +1,3 @@
-% !TEX program = pdflatex
 \documentclass{article} %document style and layout
 \usepackage{enumitem} %list of elements
 \usepackage{imakeidx}
@@ -33,8 +32,9 @@
 \renewcommand\maketitlehookd{\vfill\null}
 
 %-------Titlepage information------------------------------------------
-\title{\textbf{\huge{Wireless internet - WiFi traffic classification.}}}
-\author{Luca Ferraro (10748116), Bernardo Camajori Tedeschini (10584438), William Colombo (10537311)\\ 
+\title{\textbf{\huge{Wireless communications - Adaptive beamforming}}}
+\author{Luca Ferraro (10748116), Bernardo Camajori Tedeschini (10584438), \\
+            William Colombo (10537311)\\ 
 \textcolor{url_blue}{\url{https://github.com/BernardoCama/WirelessCommunicationProject}}}
 \date{A.Y. 2020/2021♯}
 %----------------------------------------------------------------------
