Modified source file + project description section

--- a/Report/Project_report.tex
+++ b/Report/Project_report.tex
@@ -5,8 +5,6 @@
 \usepackage{xcolor}
 \usepackage{graphicx}
 \usepackage{subcaption}
-% \usepackage[utf8]{inputenc}
-% \usepackage[T1]{fontenc}
 \usepackage{listings} %package to import code
 \lstdefinestyle{mystyle}{
     backgroundcolor=\color{backcolour},   
@@ -32,7 +30,9 @@
 \renewcommand\maketitlehookd{\vfill\null}
 
 %-------Titlepage information------------------------------------------
-\title{\textbf{\huge{Wireless communications - Adaptive beamforming}}}
+\title{\textbf{\huge{Wireless communications \\ 
+                             - \\ 
+                    Adaptive beamforming}}}
 \author{Luca Ferraro (10748116), Bernardo Camajori Tedeschini (10584438), \\
             William Colombo (10537311)\\ 
 \textcolor{url_blue}{\url{https://github.com/BernardoCama/WirelessCommunicationProject}}}
@@ -58,38 +58,37 @@
 %------------------------------------------------------------------------------------------------------------------------------------------------
 \clearpage
 \section{Introduction}
-\label{sect:introduction}
+\label{sec:introduction}
 \input{Introduction.tex}
-
 
 %------------------------------------------------------------------------------------------------------------------------------------------------
 \clearpage
 \section{Project description}
-\label{sect:project}
+\label{sec:project}
 \input{Project_description.tex}
-
 
 %------------------------------------------------------------------------------------------------------------------------------------------------
 \clearpage
 \section{SNR comparison}
-\label{sect:project}
+\label{sec:snr_comparison}
 \input{SNR_comparison.tex}
 
 %------------------------------------------------------------------------------------------------------------------------------------------------
 \clearpage
 \section{Antenna array comparison}
-\label{sect:project}
+\label{sec:antenna_array_comparison}
 \input{Antenna_array_comparison.tex}
 
 %------------------------------------------------------------------------------------------------------------------------------------------------
 \clearpage
 \section{Tracking}
-\label{sect:project}
+\label{sec:tracking}
 \input{Tracking.tex}
 
 %------------------------------------------------------------------------------------------------------------------------------------------------
+\clearpage
 \section{Conclusions}
-\label{sect:project}
+\label{sec:conclusions}
 \input{Conclusions.tex}
 
 %------------------------------------------------------------------------------------------------------------------------------------------------
