Project desription corrected

--- a/Report/Project_description.tex
+++ b/Report/Project_description.tex
@@ -41,7 +41,7 @@ In this report, we only describe the three most important simulations we have do
     \item Comparison of the performance in terms of constellations revealed, weigths of the antennas and BER for all the \\ 
             five beamformers considering different antenna arrays (\hyperref[sec:antenna_array_comparison]{section 4}). This has been done in the quadriga channel \\ 
             and using the LMS beamformer in the time domain.
-    \item Traking of a vehicle using LMS beamforming in the frequency domain (\hyperref[sec:tracking]{section 5}).
+    \item Traking of two vehicles using LMS beamforming in the frequency domain (\hyperref[sec:tracking]{section 5}).
 \end{enumerate}
 
 All the other simulations we have done can be found on the \textit{Github} repository of the project (link in title page).
