--- a/Report/Introduction.tex
+++ b/Report/Introduction.tex
@@ -25,7 +25,7 @@ The main parameters of the Modulation are:
     \item \textbf{NumGuardBandCarriers} The number of Guard Bands in frequency domain to protect the OFDM Spectrum from other adjacent trasmissions.\\
                         In our case: NumGuardBandCarriers = [1;1] one for each side.
     \item \textbf{Pilot Positions} The sub-carrier location of Pilot signals, known sequence of symbols that are used to estimate tha channel.\\
-                        In our case: Pilotindices = [2]. We really don'use use the Pilot, since we consider the first symbols of the transmission as known, but for completeness we droped off at least one Pilot.
+                        In our case: Pilotindices = [2]. We really don'use use the Pilot, since we consider the first symbols of the transmission as known, but for completeness we dropped off at least one Pilot.
 \end{enumerate}
 
 
