Introduction report and tracking

--- a/Report/Project_report.tex
+++ b/Report/Project_report.tex
@@ -1,11 +1,13 @@
-\documentclass{article} %document style and layout
+\documentclass{article}
 \usepackage{enumitem} %list of elements
 \usepackage{imakeidx}
+\usepackage{inputenc}
 \usepackage{hyperref}
 \usepackage{xcolor}
 \usepackage{graphicx}
 \usepackage{subcaption}
 \usepackage{listings} %package to import code
+\usepackage{newunicodechar}
 \lstdefinestyle{mystyle}{
     backgroundcolor=\color{backcolour},   
     commentstyle=\color{code_green},
