Antenna array comparison completed + changes in main tex file

--- a/Report/Project_description.tex
+++ b/Report/Project_description.tex
@@ -24,7 +24,7 @@ All the 5 beamformers have been tested on 3 different channel:
 \begin{enumerate}
     \item \textbf{LOS channel} A simple line of sigth channel with no reflections.
     \item \textbf{Two-ray channel} For each signal, we consider a direct path (LOS) and a single reflection.
-    \item \textbf{Quadriga channel} Here, the scenario we have used is the \textit{QuaDRiGa\_UD2D\_LOS}.
+    \item \textbf{QuaDRiGa channel} Here, the scenario we have used is the $QuaDRiGa\_UD2D\_LOS$.
 \end{enumerate}
 
 \subsection{Signals}
