--- a/Report/Introduction.tex
+++ b/Report/Introduction.tex
@@ -63,5 +63,5 @@ $AF(\theta,\phi)$ = $w^Hs$ where:
     \item $w$ are the weigths of the Beamformer
 \end{itemize}
 
-In the project, in particular in Section 4., we compare the different \textbf{Array Pattern Function} 
+In the project, in particular in \hyperref[sec:antenna_array_comparison]{section 4}, we compare the different \textbf{Array Pattern Function} 
 of various type of Beamformer.
