--- a/Report/Project_report.tex
+++ b/Report/Project_report.tex
@@ -19,7 +19,7 @@
 \author{Luca Ferraro (10748116), Bernardo Camajori Tedeschini (10584438), \\
             William Colombo (10537311)\\ 
 \textcolor{url_blue}{\url{https://github.com/BernardoCama/WirelessCommunicationProject}}}
-\date{A.Y. 2020/2021♯}
+\date{A.Y. 2020/2020}
 %----------------------------------------------------------------------
 
 \begin{document}
