--- a/Report/Tracking.tex
+++ b/Report/Tracking.tex
@@ -38,12 +38,12 @@ As parameters we used Carrier Frequency fc = 2.6 $GHz$, OFDM with 4-QAM as modul
 
 The experiment shows that at the beginning the Tx with Vehicle1 has practically zero errors since it is the nearest to the station
 and the music algorithm can estimate without problems its position. Instead the Tx with Vehicle2 has many more errors, due to 
-the many multipath of the channel and to the lower received Power.
+the many multipath of the channel and to the lower received Power (Figure \ref{fig:Begin_tx}).
 
-When they are about the same distance and in normal conditions the track performs without any particular problem.
+When they are about the same distance and in normal conditions the track performs without any particular problem (Figure \ref{fig:Middle_tx}).
 
 At the end when Vehicle2 is the nearest to the BaseStation, the situation is inverted and the Tx with Vehicle2 is far more 
-reliable that with Vehicle1.
+reliable that with Vehicle1 (Figure \ref{fig:End_tx}).
 
 \begin{figure}[ht]
     \includegraphics[width=\linewidth]{Begin_tx.png}
