--- a/Report/Antenna_array_comparison.tex
+++ b/Report/Antenna_array_comparison.tex
@@ -91,7 +91,7 @@ The most interesting things to be noticed are two:
 \subsection{Results: \textit{BER}}
 
 Finally, the Figure \ref{fig:BER} shows how the $BER$ varies for the five beamformers as a function of the numberr of antennas.\\
-As we can see, the $BER$ is different from zero only when we use the 2x2 antenna array. This means that four antennas may not
+As we can see, the $BER$ here is always zero, whatever the number of antennas we use. This means that four antennas may not
 be sufficient for applying an effective beamforming technique. Actually, this also depends on the beamformer that we are using:
 the more it's sophisticated, the less antennas we can use. But this also depends on the specific scenario. \\
 What we can in general conclude is that the higher the number of antennas, the lower the $BER$; the actual number of antennas 
