--- a/Report/Project_description.tex
+++ b/Report/Project_description.tex
@@ -7,7 +7,8 @@ We have implemented 5 beamforming techniques:
 
 \begin{enumerate}
     \item \textbf{Simple beamforming} The phases are selected to steer the array in a particular direction.
-    \item \textbf{Null-steering beamforming} Used to cancel K <= N-2 plane waves arriving from known directions.
+    \item \textbf{Null-steering beamforming} Used to cancel K $\leq$ N-2 plane waves arriving from known directions (N = number of
+                antennas).
     \item \textbf{Minimun variance distiortionless response (MVDR) beamforming} This beamformer minimizes the interference-plus-
             noise power at the output of the beamformer. 
     \item \textbf{Minimum mean square error (MMSE) beamforming} The weigths of the antennas are adjusted in a way that the
