--- a/Report/Project_report.tex
+++ b/Report/Project_report.tex
@@ -7,7 +7,7 @@
 \usepackage{subcaption}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-
+\usepackage{siunitx}
 \usepackage{titling}
 \renewcommand\maketitlehooka{\null\mbox{}\vfill}
 \renewcommand\maketitlehookd{\vfill\null}
