--- a/Report/Antenna_array_comparison.tex
+++ b/Report/Antenna_array_comparison.tex
@@ -23,8 +23,8 @@ particular, for each beamformer and for each antenna array, we have studied:
 
 In this simulation, we have considered two sources that we call $V1$ and $V2$: the signal we want to receive is the one from $V1$,
 while $V2$ is producing an interfering signal.\\ 
-Both the vehicles are not moving and they are transmitting 100 $4\-QAM$ symbols.\\
-The geometry of the symulation can be seen in Figure \ref{fig:Scenario_still}.
+Both the vehicles are not moving and they are transmitting 100 4-QAM symbols.\\
+The geometry of the simulation can be seen in Figure \ref{fig:Scenario_still}.
 
 \begin{figure}[ht]
     \includegraphics[width=\linewidth]{Quadriga1.png}
@@ -35,7 +35,7 @@ The geometry of the symulation can be seen in Figure \ref{fig:Scenario_still}.
 \subsection{Steps of the simulation}
 
 The very first thing we do in our simulation is defining the geometry of our scenario, so positioning the vehicles and the base station.\\
-Then, we prepare the signal to be transmitted, that is an OFDM signal modulating symbols from a 4\-QAM modulation.\\
+Then, we prepare the signal to be transmitted, that is an OFDM signal modulating symbols from a 4-QAM modulation.\\
 The simulation proceeds with a loop on the four different antenna arrays. In each loop, the main steps we follow are:
 
 \begin{enumerate}
@@ -56,8 +56,8 @@ At the end of the loop, we show the results by making some plots and videos that
 
 In the Figure \ref{fig:Constellations} we can see 4 images, one per antenna array; in each one of them, we have
 plotted the constellation revealed by using the five different beamformers. \\ 
-As we can see, in general the higher the number of antenna we are using, the more precise is the $QAM$ constellation. This
-is due to the fact that with more antenna the precision in the angular localization of the source is more precise; therefore, 
+As we can see, in general the higher the number of antennas we are using, the more precise is the $QAM$ constellation. This
+is due to the fact that with more antennas the precision in the angular localization of the source is higher; therefore, 
 the beam that points towards it is narrower and the interfering signal is more attenuated (this can be seen even better by
 looking at the antenna pattern functions).
 
@@ -91,11 +91,12 @@ The most interesting things to be noticed are two:
 \subsection{Results: \textit{BER}}
 
 Finally, the Figure \ref{fig:BER} shows how the $BER$ varies for the five beamformers as a function of the numberr of antennas.\\
-As we can see, the $BER$ here is always zero, whatever the number of antennas we use. This means that four antennas may not
-be sufficient for applying an effective beamforming technique. Actually, this also depends on the beamformer that we are using:
-the more it's sophisticated, the less antennas we can use. But this also depends on the specific scenario. \\
-What we can in general conclude is that the higher the number of antennas, the lower the $BER$; the actual number of antennas 
-needed depends on the target $BER$ and on the model considered.
+As we can see, the $BER$ here is always zero, whatever the number of antennas we use. This is a special case since we are using 
+the real DoAs for computing the weights of the antennas; in a real-world situation (in which DoAs are estimated through 
+specific algorithms like MUSIC), th BER will be in general higher.\\ 
+Actually, this result also depends on the beamformer and on the antenna array we are using: given an antenna array,  the more 
+sophisticated is the beamformer, the lower the $BER$ and, given a beamformer, the higher the number of antennas the better the
+$BER$.
 
 \begin{figure}[ht]
     \includegraphics[width=\linewidth]{BER.jpg}
