--- a/Report/Conclusions.tex
+++ b/Report/Conclusions.tex
@@ -1,6 +1,6 @@
 \subsection{What we have learned}
 
-With this project, we have understood the potentials of different techniques of beamforming.\\
+With this project, we have understood the potentials of different beamforming techniques.\\
 We have used beamforming for isolating a source in an enviroment full of interference and for tracking users,
 and these two are the main field in which beamforming is used. 
 
