--- a/Report/SNR_comparison.tex
+++ b/Report/SNR_comparison.tex
@@ -25,8 +25,8 @@ curve input SNR - output SNR for all the beamformers:
 
 \begin{enumerate}
     \item Definition of the current number of interferents
-    \item Generation of scenario and of singnals
-    \item Passage of signals though the $LOS$ channel
+    \item Generation of the scenario and of the singnals
+    \item Passage of signals through the $LOS$ channel
     \item For all the input SNR levels:
     \begin{enumerate}
         \item Add noise to the good signal in a way that the SNR is the current one
@@ -40,8 +40,8 @@ curve input SNR - output SNR for all the beamformers:
 
 \subsection{Results}
 
-In Figure \ref{fig:SNR_comparison}, we can see in the four graphs the curves SNRin - SNRout for the different
-beamformers.
+In Figure \ref{fig:SNR_comparison}, we can see in the four graphs the curves SNRin - SNRout. In a single figure, the 
+number of interferents is fixed and we show the lines for the different beamformers.
 
 \begin{figure}[ht]
     \includegraphics[width=\linewidth]{SNR_comparison.png}  
@@ -50,7 +50,7 @@ beamformers.
 \end{figure}
 
 As we can see, without any interfering signals, the behavior of all the beamformers is almost linear and the gain is 
-approximately constant and equal to 12dB.
+approximately constant and equal to 12dB.\\ 
 As the number of interferents increases, we can identify as general behavior:
 
 \begin{enumerate}
