--- a/Report/Introduction.tex
+++ b/Report/Introduction.tex
@@ -4,7 +4,7 @@ are mandatory for the comprehension of the project.
 \subsection{OFDM signal}
 
 OFDM (Orthogonal Frequency Division Multiplexing)
-is a multi-carrier modulation that is able to obtain:
+is a multi-carrier modulation whose key feautures are:
 \begin{enumerate}
     \item \textbf{Flexibilty} By means of:
     \begin{itemize}
@@ -12,7 +12,7 @@ is a multi-carrier modulation that is able to obtain:
         \item   \textbf{Multiple Access} Multiple Access Feature with the use of OFDMA.
     \end{itemize}
     \item \textbf{Digital Implementation} With the use of DFT and IDFT at Tx and Rx side respectively to pass from Samples in frequency domain to time domain and viceversa.
-    \item \textbf{Simple Equalization} Through the use of Cyclic Prefix that permits the rapresentation of the channel with a single tap (Flat Ch) in each sub-carrier.
+    \item \textbf{Simple Equalization} Through the use of Cyclic Prefix that permits the representation of the channel with a single tap (Flat Ch) in each sub-carrier.
     \item \textbf{MIMO Implemetaion} Suited for the use of MIMO/MMIMO Systems.
 \end{enumerate}
 
@@ -25,7 +25,7 @@ The main parameters of the Modulation are:
     \item \textbf{NumGuardBandCarriers} The number of Guard Bands in frequency domain to protect the OFDM Spectrum from other adjacent trasmissions.\\
                         In our case: NumGuardBandCarriers = [1;1] one for each side.
     \item \textbf{Pilot Positions} The sub-carrier location of Pilot signals, known sequence of symbols that are used to estimate tha channel.\\
-                        In our case: Pilotindices = [2]. We really don'use use the Pilot, since we consider the first symbols of the transmission as known, but for completeness we dropped off at least one Pilot.
+                        In our case: Pilotindices = [2]. We really don't use use the Pilot, since we consider the first symbols of the transmission as known, but for completeness we dropped off at least one Pilot.
 \end{enumerate}
 
 
@@ -33,7 +33,7 @@ The main parameters of the Modulation are:
 
 3GPP (3rd Generation Partnership Project) was founded in December 1998 when the European 
 Telecommunications Standards Institute (ETSI) 
-and other standard development organizations (SDOs) 
+partnered with other standard development organizations (SDOs) 
 from around the world to develop new technologies (technology specifications).
 
 As Channel Model we use QuaDRiGa (QUAsi Deterministic RadIo channel GenerAtor) that 
